crates/aura-telemetry/tests/compile_fail/integer_field.stderr
error[E0277]: the trait bound `u64: IntoTelemetryProperty` is not satisfied
 --> tests/compile_fail/integer_field.rs:8:10
  |
8 | #[derive(Event)]
  |          ^^^^^ the trait `IntoTelemetryProperty` is not implemented for `u64`
  |
  = help: the following other types implement trait `IntoTelemetryProperty`:
            &'static str
            PropertyValue
            aura_telemetry::properties::DeploymentMethod
            aura_telemetry::properties::OsFamily
            aura_telemetry::properties::SessionUuid
            aura_telemetry::properties::Source
            bool
  = note: this error originates in the derive macro `Event` (in Nightly builds, run with -Z macro-backtrace for more info)
